# genom

./: .gitignore  CHANGELOG  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.mk.in  config.posix.mk  config.rtai.mk  config.xenomai.mk  configure  configure.ac  configure.in  genom-config.h.in  genom.pc.in  robots.m4
canvas/: Makefile.in  Makefile.top.in  acinclude.m4  aclocal.m4  autogen.in  autogen.sh  configure  configure.ac.in  configure.in  configure.in.in  end.pl  module-oprs.pc.in  module.pc.in  start.pl
canvas/autoconf/: Makefile.auto.in  Makefile.bootstrap.in  codels.mk  config.mk.in  config.posix.mk  config.rtai.mk  config.xenomai.mk  configure.ac.begin.in  configure.ac.end.in  configure.ac.in  configure.begin.in.in  configure.end.in.in  genom.mk  module-oprs.pc.in  module-tclserv_client.pc.in  module.pc.in  robots.m4
canvas/codels/: Makefile.in  Makefile.vxworks  start
canvas/propice/: ChangeLog  Makefile  Makefile.protos  Makefile.unix  Makefile.vxworks  propice.c  propiceDecode.c  propiceDecode.h  propiceEncode.c  propiceEncode.h  propiceRqst.op
canvas/server/: Makefile  Makefile.in  Makefile.protos  Makefile.vxworks  MakefileSpy  MakefileSpy.unix  cntrlTask.c  connectLib.c  error.c  error.h  essay.c  essayCntrl.c  essayExec.c  essay_script  execTask.c  execTaskHeader.h  header.h  init.c  initProto.h  moduleInit.c  msgCntrl.c  msgExec.c  msgLib.c  msgLib.h  msgLibCntrlProto.h  msgLibExecProto.h  msgLibProto.h  posterLib.c  posterLib.h  posterLibStruct.h  posterShowLib.c  posterShowLib.h  posterXMLLib.c  posterXMLLib.h  print.h  printXML.h  reports.h  requestCntrl.c  requestExec.c  scan.h  (+15 more)
canvas/server/openprs/: openprs.c  openprsDecode.c  openprsDecode.h  openprsEncode.c  openprsEncode.h  openprsPoster.op  openprsProto.h  openprsRqst.op
canvas/server/tcl/: tclClient.tcl  tclClientPoster.tcl  tclClientRqst.tcl  tclEpilog.c  tclPoster.c  tclProlog.c  tclRqst.c
canvas/server/tclservClient/: error.c  error.h  tclservClientDecode.h  tclservClientEncode.h  tclservClientMsgCtrl.c  tclservClientMsgExec.c  tclservClientMsgLib.c  tclservClientMsgLib.h  tclservClientMsgLibCtrlProto.h  tclservClientMsgLibExecProto.h
compat/: setenv.c
doc/slides/: foilhtml.sty  genom-slides.tex  genom.sty  genom.tex  mhfoils.sty
doc/slides/figures/: cycle.idraw  grapheExec.idraw  mobile.fig  module-fonctionmt.idraw  module-fonctionmt2.idraw  module-simple.idraw  modulePoster.idraw  moduleRqst2.idraw
doc/user_guide/: Makefile.in  genom.sty  genom.tex
doc/user_guide/fig/: activity-states.eps  cycle-en.eps  module-en.eps
doc/user_guide/tex/: genom-anx-comm.tex  genom-anx-files.tex  genom-anx-trouble.tex  genom-codels.tex  genom-configuration.tex  genom-edition.tex  genom-generation.tex  genom-instances.tex  genom-intro.tex  genom-module.tex  genom-session.tex  genom-syntax.tex  genom-using.tex
emacs/: Makefile.in  genom-mode.el
include/: Makefile.in  genomModulesLibProto.h  genomReportsStd.h  printStateProto.h
include/genom/: essayLib.h  essayLibProto.h  genom.h  genomError.h  genomReportsLib.h  genomReportsLibProto.h  genomReportsStd.h  h2endian.h  h2endianProto.h  moduleEvents.h  modules.h  posterXMLLib.h  printProto.h  printScan.h  printStateProto.h  printXMLProto.h  scanBufProto.h  scanProto.h  testLib.h  testLibProto.h
lib/: Makefile.in  Makefile.rtai.mk  essayLib.c  genomModulesLib.c  genomReportsLib.c  h2endian.c  instance.c  moduleEvents.c  posterXMLLib.c  print.c  printScanUtil.c  printState.c  printXML.c  rtai.c  scan.c  scan_buf.c  testLib.c
m4/: robots.m4
scripts/: Makefile.in  genom-clean  genom-regen  killmodule  killmymodules
src/: ChangeLog  Makefile.in  cntrlTaskGen.c  cntrlTaskGen.h  cntrlTaskGenProto.h  configureGen.c  configureGen.h  endianGen.c  endianGen.h  errorGen.c  errorGen.h  errorGenProto.h  essayGen.c  essayGen.h  essayGenProto.h  execTaskGen.c  execTaskGen.h  execTaskGenProto.h  extern_processes.c  extern_processes.h  genom.c  genom.h  genomProto.h  grammar.bnf  headerGen.c  headerGen.h  headerGenProto.h  initGen.c  initGen.h  initGenProto.h  makeGen.c  makeGen.h  makeGenProto.h  moduleInitGen.c  moduleInitGen.h  moduleInitGenProto.h  move-if-change  msgLibGen.c  msgLibGen.h  msgLibGenProto.h  (+81 more)
tclserv/client/: Makefile.in  cs.tcl  editval.tcl  load.tcl  misc.tcl  pkgIndex.tcl.in  pmtools.tcl  server.tcl  tkgenom.tcl
tclserv/doc/: tclserv_protocol
tclserv/doc/slides/: c-code.sty  cartouche.sty  depend.sty  docfig.sty  docversion.sty  show.cls  tcl.tex  tclserv.tex  tk.tex
tclserv/doc/slides/fig/: tclServ.fig  tclServ.psfrag  tk-hierarchy.fig  tk-hierarchy.psfrag
tclserv/doc/slides/pp4/: background.sty
tclserv/server/: Makefile.in  cs.tcl  init.tcl  load.tcl  main.c  pkgIndex.tcl  server.tcl  tclServ.h  tcl_cs.c  tcl_cs.h  tcl_enum.c
